@@ -7,6 +7,7 @@ For Users:
 NEW: Module Ticket is available as a stable module.
 NEW: Experimental module "Vendor receptions".
 NEW: Experimental module "BOM".
+FIX: Disallow line start date to be after end date
 
 For Developers:
 NEW: Module DebugBar is available as a stable module.
